fixing star alignment across devices

--- a/scss/partials/_2015-forum.scss
+++ b/scss/partials/_2015-forum.scss
@@ -171,11 +171,12 @@ ul.agenda-track {
 
   li {
     border-bottom: 1px solid $midgrey;
+    display: block;
     list-style: none;
     margin-bottom: 10px;
+    overflow: auto;
     padding-bottom: 10px;
-    padding-left: 30px;
-    position: relative;
+    padding-left: 0;
 
     &:last-child {
       border-bottom: none;
@@ -185,6 +186,11 @@ ul.agenda-track {
 
     &.starred button.star-btn {
       color: $gold;
+    }
+
+    .agenda-track-info {
+      float: left;
+      width: 85%;
     }
   }
 
@@ -196,10 +202,9 @@ ul.agenda-track {
     background: 0;
     border: 0;
     color: $midgrey;
+    float: left;
     font-size: 25px;
-    left: -10px;
-    top: -5px;
-    position: absolute;
+    width: 15%;
 
     &:hover {
       color: $middarkgrey;
